网关第四次修改